<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FlavorFragment">

    <data>
        <variable
            name="viewModel"
            type="com.ebenezer.gana.shawarma.ui.viewModels.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="com.ebenezer.gana.shawarma.ui.FlavorFragment" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <RadioGroup

                android:id="@+id/flavor_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/falafel_veggie"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:checked="@{viewModel.flavor.equals(@string/falafel)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/falafel)}"
                    android:text="@string/falafel" />

                <RadioButton
                    android:id="@+id/iraqi_gus"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/iraqi)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/iraqi)}"
                    android:layout_height="wrap_content"
                    android:text="@string/iraqi" />

                <RadioButton
                    android:id="@+id/iraqi_falafel"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/iraqi_falafel)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/iraqi_falafel)}"
                    android:layout_height="wrap_content"

                    android:text="@string/iraqi_falafel" />

                <RadioButton
                    android:id="@+id/shawarma_meat_only"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/sharawa_meat_only)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/sharawa_meat_only)}"
                    android:layout_height="wrap_content"
                    android:text="@string/sharawa_meat_only" />

                <RadioButton
                    android:id="@+id/hommade_burger"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/home_made_combo)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/home_made_combo)}"
                    android:layout_height="wrap_content"
                    android:text="@string/home_made_combo" />




                <RadioButton
                    android:id="@+id/shawarma_fries"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/shawarma_fries)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/shawarma_fries)}"
                    android:layout_height="wrap_content"
                    android:text="@string/shawarma_fries" />

                <RadioButton
                    android:id="@+id/baklava"
                    android:layout_width="wrap_content"
                    android:checked="@{viewModel.flavor.equals(@string/baklava)}"
                    android:onClick="@{() -> viewModel.setFlavor(@string/baklava)}"
                    android:layout_height="wrap_content"
                    android:text="@string/baklava" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Shawarma.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flavor_options" />

            <TextView
                android:id="@+id/subtotal"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal N20" />

            <Button
                android:onClick="@{() -> flavorFragment.cancelOrder()}"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginEnd="@dimen/side_margin"
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />


            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>